--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/Ahmad-script/bot-wa"
+    "url": "git+https://github.com/andi2612/CONTOH"
   },
   "keywords": [
     "k"
@@ -37,7 +37,7 @@
   "author": "Ahmad",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/Ahmad-script/bot-wa/issues"
+    "url": "https://github.com/andi2612/CONTOH/issues"
   },
-  "homepage": "https://github.com/Ahmad-script/bot-wa#readme"
+  "homepage": "https://github.com/andi2612/CONTOH#readme"
 }
